--- a/css/style.css
+++ b/css/style.css
@@ -1,47 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap');
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
 }
-html{
+html {
     font-size: 10px;
     font-family: 'Montserrat', sans-serif;
 }
-a{
+a {
     text-decoration: none;
 }
-.container{
+.container {
     min-height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-img{
+img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
-p{
+p {
     font-size: 1.4rem;
     font-weight: 300;
     margin-top: 5px;
     line-height: 2.5rem;
-    letter-spacing: .05rem;
+    letter-spacing: 0.05rem;
     color: #000;
 }
 
-.section-title{
+.section-title {
     font-size: 4rem;
     color: #000;
     font-weight: 300;
     text-transform: uppercase;
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
     text-align: center;
 }
-.section-title span{
+.section-title span {
     color: crimson;
 }
 .cta {
@@ -52,32 +51,32 @@ p{
     border: 2px solid crimson;
     font-size: 2rem;
     text-transform: uppercase;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     margin-top: 36px;
-    transition: .3s ease;
-    transition-property: background-color,color;
+    transition: 0.3s ease;
+    transition-property: background-color, color;
 }
-.cta:hover{
+.cta:hover {
     color: #fff;
     background-color: crimson;
 }
-.brand h1{
+.brand h1 {
     font-size: 3rem;
     text-transform: uppercase;
     color: #fff;
 }
-.brand h1 span{
+.brand h1 span {
     color: crimson;
 }
 /* Hero section  */
 #hero {
-    background-image: url(./img/bg-img.jpg);
+    background-image: url(../img/bg-img.jpg);
     background-size: cover;
     background-position: bottom center;
     position: relative;
     z-index: 1;
 }
-#hero::after{
+#hero::after {
     content: '';
     position: absolute;
     top: 0;
@@ -85,36 +84,35 @@ p{
     height: 100%;
     width: 100%;
     background-color: #000;
-    opacity: .4;
+    opacity: 0.4;
     z-index: -1;
 }
-#hero .hero{
+#hero .hero {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 50px;
     justify-content: flex-start;
 }
-#hero h1{
+#hero h1 {
     display: block;
     width: fit-content;
     font-size: 4rem;
     position: relative;
     color: transparent;
-    animation: text_reveal .5s ease forwards;
+    animation: text_reveal 0.5s ease forwards;
     animation-delay: 1.5s;
-
 }
-#hero h1:nth-child(1){
+#hero h1:nth-child(1) {
     animation-delay: 1s;
 }
-#hero h1:nth-child(2){
+#hero h1:nth-child(2) {
     animation-delay: 2s;
 }
-#hero h1:nth-child(3){
-    animation: text_reveal_name .5s ease forwards;
+#hero h1:nth-child(3) {
+    animation: text_reveal_name 0.5s ease forwards;
     animation-delay: 3s;
 }
-#hero h1 span{
+#hero h1 span {
     position: absolute;
     height: 100%;
     width: 0;
@@ -122,45 +120,43 @@ p{
     left: 0;
     background-color: crimson;
     animation: text_reveal_box 1s ease;
-    animation-delay: .3s;
+    animation-delay: 0.3s;
 }
-#hero h1:nth-child(1) span{
-    animation-delay: .5s;
+#hero h1:nth-child(1) span {
+    animation-delay: 0.5s;
 }
-#hero h1:nth-child(2) span{
+#hero h1:nth-child(2) span {
     animation-delay: 1.5s;
 }
-#hero h1:nth-child(3) span{
+#hero h1:nth-child(3) span {
     animation-delay: 2.5s;
 }
 /* End hero section  */
 
-
-
 /* Services section */
 
-#services .service{
-flex-direction: column;
-text-align: center;
-max-width: 1500px;
-margin: 0 auto;
-padding: 100px 0;
+#services .service {
+    flex-direction: column;
+    text-align: center;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 100px 0;
 }
 
-#services .service-bottom{
+#services .service-bottom {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 50px;
 }
-#services .service-title{
+#services .service-title {
     flex-basis: 80%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
 }
-#services .service-item{
+#services .service-item {
     flex-basis: 80%;
     display: flex;
     justify-content: center;
@@ -176,7 +172,7 @@ padding: 100px 0;
     overflow: hidden;
 }
 
-#services .service-item::after{
+#services .service-item::after {
     content: '';
     position: absolute;
     left: 0;
@@ -184,48 +180,47 @@ padding: 100px 0;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .8;
+    opacity: 0.8;
     z-index: -1;
 }
 
-#services .icon{
+#services .icon {
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
 }
 
-#services .service-item h2{
+#services .service-item h2 {
     color: #fff;
     font-size: 2rem;
     margin-bottom: 10px;
     text-transform: uppercase;
 }
 
-#services .service-item p{
+#services .service-item p {
     color: #fff;
     text-align: left;
 }
 /* End Services section */
 
-
 /* Projects section */
 
-#projects .projects{
+#projects .projects {
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
     padding: 100px 0;
 }
-#projects .projects-header h1{
+#projects .projects-header h1 {
     margin-bottom: 50px;
 }
-#projects .al-projects{
+#projects .al-projects {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-#projects .project-item{
+#projects .project-item {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -236,7 +231,7 @@ padding: 100px 0;
     border-radius: 10px;
 }
 
-#projects .project-info{
+#projects .project-info {
     height: 100%;
     padding: 30px;
     flex-basis: 50%;
@@ -248,31 +243,31 @@ padding: 100px 0;
     color: #fff;
 }
 
-#projects .project-info h1{
+#projects .project-info h1 {
     font-size: 4rem;
     font-weight: 500;
 }
 
-#projects .project-info h2{
+#projects .project-info h2 {
     font-size: 1.8rem;
     font-weight: 500;
     margin-top: 10px;
 }
-#projects .project-info p{
+#projects .project-info p {
     color: #fff;
 }
-#projects .project-img{
+#projects .project-img {
     flex-basis: 50%;
     height: 300px;
     overflow: hidden;
     position: relative;
 }
-#projects .project-img img{
+#projects .project-img img {
     width: 100%;
     height: 300px;
 }
 
-#projects .project-img::after{
+#projects .project-img::after {
     content: '';
     position: absolute;
     left: 0;
@@ -280,12 +275,12 @@ padding: 100px 0;
     width: 100%;
     height: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .7;
+    opacity: 0.7;
 }
-#projects .project-img img{
-    transition: .3 ease transform;
+#projects .project-img img {
+    transition: 0.3 ease transform;
 }
-#projects .project-item:hover .project-img img{
+#projects .project-item:hover .project-img img {
     transform: scale(1.1);
 }
 
@@ -293,38 +288,38 @@ padding: 100px 0;
 
 /* About section */
 
-#about .about{
+#about .about {
     flex-direction: column-reverse;
     text-align: center;
     max-width: 1200px;
     padding: 100px 20px;
     margin: 0 auto;
 }
-#about .col-left{
+#about .col-left {
     width: 250px;
     height: 360px;
 }
-#about .col-right h2{
+#about .col-right h2 {
     font-size: 1.8rem;
     font-weight: 500;
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
     margin-bottom: 10px;
 }
 
-#about .col-right .cta{
+#about .col-right .cta {
     color: black;
     margin-bottom: 50px;
     padding: 10px 20px;
     font-size: 2rem;
 }
-#about .col-left .about-img{
+#about .col-left .about-img {
     width: 100%;
     height: 100%;
     position: relative;
     border: 10px solid white;
 }
 
-#about .col-left .about-img::after{
+#about .col-left .about-img::after {
     content: '';
     position: absolute;
     left: -33px;
@@ -338,15 +333,15 @@ padding: 100px 0;
 /* End About section */
 
 /* Contact section */
-#contact .contact{
+#contact .contact {
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
 }
-#contact .contact-items{
+#contact .contact-items {
     width: 400px;
 }
-#contact .contact-item{
+#contact .contact-item {
     width: 80%;
     padding: 20px;
     text-align: center;
@@ -358,22 +353,22 @@ padding: 100px 0;
     align-items: center;
     flex-direction: column;
     box-shadow: 0px 0px 18px 0px #0000002c;
-    transition: .3s ease box-shadow;
+    transition: 0.3s ease box-shadow;
 }
-#contact .contact-item:hover{
+#contact .contact-item:hover {
     box-shadow: 0px 0px 5px 0px #0000002c;
 }
-#contact .icon{
+#contact .icon {
     width: 70px;
     margin: 0 auto;
     margin-bottom: 10px;
 }
-#contact .contact-info h1{
+#contact .contact-info h1 {
     font-size: 2.5rem;
     font-weight: 500;
     margin-bottom: 5px;
 }
-#contact .contact-info h2{
+#contact .contact-info h2 {
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: 500;
@@ -381,61 +376,60 @@ padding: 100px 0;
 /* End Contact section */
 
 /* Footer */
-#footer{
+#footer {
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
-#footer .footer{
+#footer .footer {
     min-height: 200px;
     flex-direction: column;
     padding-top: 50px;
     padding-bottom: 10px;
 }
-#footer h2{
+#footer h2 {
     color: white;
     font-size: 1.8rem;
     font-weight: 500;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     margin-top: 10px;
     margin-bottom: 30px;
 }
-#footer .social-icon{
+#footer .social-icon {
     display: flex;
     margin-bottom: 20px;
 }
-#footer .social-item{
+#footer .social-item {
     height: 30px;
     width: 30px;
     margin: 0 10px;
 }
-#footer .social-item img:hover{
+#footer .social-item img:hover {
     box-shadow: 0px 0px 18px 0px #0000002c;
     padding: 3px;
 }
-#footer p{
+#footer p {
     color: #fff;
     font-size: 1.3rem;
 }
 /* End Footer */
 
-
 /* Keyframers */
-@keyframes text_reveal_box{
-    50%{
+@keyframes text_reveal_box {
+    50% {
         width: 100%;
         left: 0;
     }
-    100%{
+    100% {
         width: 0;
         left: 100%;
     }
 }
-@keyframes text_reveal{
-    100%{
+@keyframes text_reveal {
+    100% {
         color: #fff;
     }
 }
-@keyframes text_reveal_name{
-    100%{
+@keyframes text_reveal_name {
+    100% {
         color: crimson;
         font-weight: 500;
     }
@@ -443,79 +437,78 @@ padding: 100px 0;
 /* End Keyframers */
 
 /* Media Query For Tablet */
-@media only screen and (min-width:768px) {
-    .cta{
+@media only screen and (min-width: 768px) {
+    .cta {
         font-size: 2.5rem;
         padding: 20px 60px;
     }
-    h1.section-title{
+    h1.section-title {
         font-size: 6rem;
     }
     /* Hero */
-    #hero h1{
+    #hero h1 {
         font-size: 7rem;
     }
     /* End Hero */
 
     /* Servic */
-    #services .service-bottom .service-item{
+    #services .service-bottom .service-item {
         flex-basis: 45%;
         margin: 2.5%;
     }
     /* End Servic */
 
     /* Project */
-    #projects .project-item{
+    #projects .project-item {
         flex-direction: row;
     }
-    #projects .project-item:nth-child(even){
+    #projects .project-item:nth-child(even) {
         flex-direction: row-reverse;
     }
 
-    #projects .project-item{
+    #projects .project-item {
         height: 400px;
         width: 100%;
         margin: 0;
         border-radius: 0;
     }
-    #projects .al-projects .project-info{
+    #projects .al-projects .project-info {
         height: 100%;
     }
 
-    #projects .al-projects .project-img{
+    #projects .al-projects .project-img {
         height: 100%;
-
     }
 
     /* End Project */
 
     /* About */
-    #about .about{
+    #about .about {
         flex-direction: row;
     }
-    #about .col-left{
+    #about .col-left {
         width: 2000px;
         height: 400px;
         padding-left: 60px;
     }
-    #about .col-left .about-img::after{
+    #about .col-left .about-img::after {
         left: -45px;
         top: 34px;
         height: 98%;
         width: 98%;
         border: 10px solid crimson;
     }
-    #about .col-right{
+    #about .col-right {
         text-align: left;
         padding: 30px;
     }
-    #about .col-right h1{
+    #about .col-right h1 {
         text-align: left;
     }
     /* End About */
 
     /* Contact */
-    #contact .contact{
+    #contact .contact {
         flex-direction: column;
         padding: 100px 0;
         align-items: center;
@@ -523,25 +516,25 @@ padding: 100px 0;
         min-width: 20vh;
     }
 
-    #contact .contact-items{
+    #contact .contact-items {
         width: 100%;
         display: flex;
         flex-direction: row;
         padding: 20px;
         margin: 0;
     }
-    #contact .contact-item{
+    #contact .contact-item {
         margin: 20px;
         flex-direction: row;
     }
-    #contact .contact-item .icon{
+    #contact .contact-item .icon {
         height: 80px;
         width: 80px;
     }
-    #contact .contact-item .icon img{
+    #contact .contact-item .icon img {
         object-fit: contain;
     }
-    #contact .contact-item .contact-info{
+    #contact .contact-item .contact-info {
         width: 100%;
         text-align: left;
         padding-left: 20px;
@@ -551,13 +544,11 @@ padding: 100px 0;
 /* End Media Query For Tablet */
 
 /* Media Query For Desktop */
-@media only screen and (min-width:1200px){
-    
-    #services .service-bottom .service-item{
+@media only screen and (min-width: 1200px) {
+    #services .service-bottom .service-item {
         flex-basis: 22%;
         margin: 1.5%;
-    } 
-    
+    }
 }
 
 /* Media Query For Desktop */
